--- a/layouts/home.html
+++ b/layouts/home.html
@@ -4,7 +4,204 @@
 
 {{ define "main" }}
 <main>
-	Main
+	<div class="bg-gray-200">
+		<div class="max-w-screen-xl px-4 py-8 mx-auto">
+			<div class="flex justify-center items-center">
+				<div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0">
+					<h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-primary md:text-5xl xl:text-6xl">
+						TC Lautlingen
+					</h1>
+					<h2 class="pb-2 text-3xl font-light text-gray-800 md:text-4xl">
+						Tennis, das verbindet
+					</h2>
+					<div class="flex justify-center mt-8 space-x-6">
+						<a href="https://m.facebook.com/people/Tennisclub-Lautlingen-eV-1974" class="text-gray-400 hover:text-gray-300">
+							<span class="sr-only">Facebook</span>
+							<svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+								<path fill-rule="evenodd"
+									  d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+									  clip-rule="evenodd" />
+							</svg>
+						</a>
+						<a href="https://www.instagram.com/tennisclub_lautlingen/" class="text-gray-400 hover:text-gray-300">
+							<span class="sr-only">Instagram</span>
+							<svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+								<path fill-rule="evenodd"
+									  d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+									  clip-rule="evenodd" />
+							</svg>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="grid lg:grid-cols-2 lg:max-w-7xl lg:mx-auto lg:px-8 lg:gap-x-24 lg:gap-y-8 px-4 mt-12 gap-y-8">
+		<div class="item">
+			<img src="/images/home/drone.jpg" class="w-full h-auto rounded-2xl" alt="P1" loading="lazy" />
+		</div>
+		<div class="item">
+			<h2 class="text-3xl font-bold tracking-tight text-primary sm:text-4xl">
+				Herzlich willkommen beim Tennis-Club Lautlingen e.V.
+			</h2>
+			<div class="mt-6 text-primary">
+				<div class="mt-6 space-y-6 text-primaryk">
+					<p class="text-lg text-primary">
+						einem dynamischen Verein mit über 300 Mitgliedern, darunter besonders viele begeisterte junge Tennisspieler! Unsere idyllische Tennisanlage im Eyachtal verfügt über zahlreiche Plätze, darunter zwei mit Flutlicht ausgestattete Courts und einer Ballwand.
+					</p>
+					<p class="text-lg text-primary">
+						Unser Leitspruch lautet: "Tennis, das verbindet!" Als Verein, der großen Wert auf Gemeinschaft und Zusammenhalt legt, sind wir stolz darauf, unseren Mitgliedern eine breite Palette an Events und Aktivitäten für alle Altersgruppen anzubieten. Neben Tennis stehen auch weitere Sportangebote wie "Fit for Tennis" und Nordic Walking zur Verfügung, um eine vielfältige sportliche Erfahrung zu gewährleisten. Unser Ziel ist es, nicht nur Sportmöglichkeiten, sondern auch eine unterstützende Gemeinschaft zu bieten, in der man gemeinsam Freude hat.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<p class="text-lg text-primary">
+				Egal, ob Sie ein Anfänger oder erfahrener Tennisspieler sind – bei uns finden Sie schnell Anschluss und können sich auf und neben dem Platz wohlfühlen. Wir setzen uns stets dafür ein, unseren Mitgliedern die bestmögliche Unterstützung zu bieten, damit sie ihre Ziele im Tennissport erreichen können. Wir sind fest davon überzeugt, dass Tennis eine großartige Möglichkeit bietet, körperliche Fitness, soziale Kontakte und Spaß miteinander zu verbinden.
+			</p>
+			<p class="mt-6 text-lg text-primary">
+				Wir freuen uns darauf, Sie auf unserer Homepage oder unserer Tennisanlage begrüßen zu dürfen! Bei Fragen oder Interesse an einer Mitgliedschaft erreichen Sie uns gerne unter <a href="mailto:info@tc-lautlingen.de">info@tc-lautlingen.de</a>.
+			</p>
+			<p class="mt-6 text-lg text-primary">
+				Bis bald beim Tennis-Club Lautlingen! Sportliche Grüße, Fabian & Reinhold
+			</p>
+		</div>
+		<div class="item">
+			<img src="/images/home/court.jpg" class="w-full h-auto rounded-2xl" alt="P1" loading="lazy" />
+		</div>
+	</div>
+
+
+	<div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
+		<div class="absolute inset-0">
+			<div class="bg-gray-200 h-1/3 sm:h-2/3"></div>
+		</div>
+		<div class="relative px-2 mx-auto max-w-7xl">
+			<div class="text-center">
+				<h2 class="text-3xl font-black tracking-tight text-primary sm:text-4xl">
+					News
+				</h2>
+			</div>
+			<div class="mx-auto text-primary max-w-7xl">
+				<div class="px-4 text-primary not-prose">
+					<div class="grid gap-4 mx-auto mt-12 mb-4 lg:max-w-none md:grid-cols-3">
+						{{ $pagesInSubfolder := where .Site.RegularPages "Section" "news" }}
+						{{ $filteredPages := first 3 $pagesInSubfolder }}
+						{{ range $filteredPages }}
+						<div class="flex flex-col overflow-hidden rounded-lg shadow-lg bg-gray-50">
+							<a href="{{.Permalink}}">
+								{{ with .Params.featured_image }}
+								{{ with resources.Get . }}
+								{{ $postimage := (.Resize "500x webp q90").RelPermalink }}
+								<img src="{{ $postimage }}" class="object-fill overflow-hidden rounded-t-lg" width="100%" height="" loading="lazy" alt="{{ .Title }}" />
+
+								{{ end }}
+								{{ end }}
+							</a>
+							<div class="p-6">
+								<div class="flex-1">
+									<a href="{{.Permalink}}" class="block mt-2 text-2xl font-black text-primary hover:text-primary-light hover:underline">
+										{{ .Title }}
+									</a>
+									<p class="mt-3 text-base text-primary-light">
+										{{ .Params.summary }}
+									</p>
+								</div>
+							</div>
+						</div>
+						{{ end }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="relative pb-16 mt-6">
+		<div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
+			<div class="relative px-6 py-10 overflow-hidden shadow-xl bg-primary-light rounded-2xl sm:px-12 sm:py-20">
+				<div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
+					<svg class="absolute inset-0 w-full h-full" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 1463 360" loading="lazy">
+						<path class="text-primary text-opacity-40" fill="currentColor" d="M-82.673 72l1761.849 472.086-134.327 501.315-1761.85-472.086z" />
+						<path class="text-primary text-opacity-40" fill="currentColor" d="M-217.088 544.086L1544.761 72l134.327 501.316-1761.849 472.086z" />
+					</svg>
+				</div>
+				<div class="relative">
+					<div class="sm:text-center">
+						<h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
+							Willst du Mitglied in unserem Verein werden?
+						</h2>
+					</div>
+					<div class="mt-4" style="margin-left:15%;margin-right:15%">
+						<a href="/mitgliedschaft">
+							<button class="bg-primary-dark block w-full px-5 py-3 text-base font-medium text-white border border-transparent rounded-md shadow hover:bg-black focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-primary-500 sm:px-10">
+								Werde Mitglied
+							</button>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="max-w-md px-4 mx-auto pt-12 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8">
+		<h2 class="text-3xl font-bold tracking-tight text-primary sm:text-4xl text-center">
+			Sponsoren
+		</h2>
+		<div class="mt-4 grid grid-cols-2 gap-0.5 lg:grid-cols-4">
+			<a href="https://www.mey.com/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/mey.png" class="max-h-12 dark:invert" alt="Mey" loading="lazy" />
+			</a>
+			<a href="https://intersport-rebi.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/rebi.jpg" class="max-h-12 dark:invert" alt="Intersport Rebi" loading="lazy" />
+			</a>
+			<a href="https://wiedler.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/wiedler.png" class="max-h-12 dark:invert" alt="Wiedler" loading="lazy" />
+			</a>
+			<a href="https://www.praxis-attilamaisch.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/maisch.png" class="max-h-12 dark:invert" alt="Maisch" loading="lazy" />
+			</a>
+			<a href="https://www.muellerstrassenbau.eu/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/mueller.jpg" class="max-h-12 dark:invert" alt="Müller Straßenbau" loading="lazy" />
+			</a>
+			<a href="https://www.mebold.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/mebold.jpg" class="max-h-12 dark:invert" alt="Mebold" loading="lazy" />
+			</a>
+			<a href="https://www.maler-geiger.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/geiger.jpg" class="max-h-12 dark:invert" alt="Geiger" loading="lazy" />
+			</a>
+			<a href="https://www.volksbank-albstadt.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/volksbank.jpg" class="max-h-12 dark:invert" alt="Volksbank Albstadt" loading="lazy" />
+			</a>
+			<a href="https://kuechenhaus-schuhmacher.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/schuhmacher.jpg" class="max-h-12 dark:invert" alt="Küchenhaus Schuhmacher" loading="lazy" />
+			</a>
+			<a href="https://www.weberheusser-yarns.com/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/weber-heusser.png" class="max-h-12 dark:invert" alt="Weber&Heusser" loading="lazy" />
+			</a>
+			<a href="https://www.sparkasse-zollernalb.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/sparkasse.jpg" class="max-h-12 dark:invert" alt="Sparkasse Zollernalb" loading="lazy" />
+			</a>
+			<a href="http://zimmerei-reinauer.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/reinauer.png" class="max-h-12 dark:invert" alt="Reinauer" loading="lazy" />
+			</a>
+			<a href="http://www.lb-mediengruppe.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/LB-Mediengruppe.png" class="max-h-12 dark:invert" alt="LB-Mediengruppe" loading="lazy" />
+			</a>
+			<a href="https://www.albstadtwerke.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
+				<img src="/images/sponsors/albstadtwerke.jpg" class="max-h-12 dark:invert" alt="AlbstadtWerke" loading="lazy" />
+			</a>
+		</div>
+	</div>
+
+
+
+	<div class="flex justify-center mt-6">
+		<img src="/images/home/wsj.png" alt="" class="w-full h-auto">
+	</div>
+
 </main>
 {{ end }}
 
