Adds Sticky to Navbar. Fixes height of PDFs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1079,12 +1079,20 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .inset-0 {
   inset: 0px;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .col-span-1 {
@@ -1209,6 +1217,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .max-h-12 {
