--- a/layouts/pdf/single.html
+++ b/layouts/pdf/single.html
@@ -1,5 +1,5 @@
 ﻿{{ define "main" }}
-<main>
+<main class="flex flex-1">
 	<div id="adobe-dc-view"></div>
 	<script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
 	<script type="text/javascript">
