--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,10 +5,8 @@
 {{ define "main" }}
 
 <div class="flex-1 flex flex-col h-full justify-center items-center">
-	<h1 class="text-5xl font-bold">404</h1>
-	<h2 class="text-3xl font-bold">Page Not Found</h2>
-	<img src="/images/DartThrowerShrug.png" alt="404" class="max-h-96 mt-6">
-	<a href="/" class="mt-4 px-4 py-2 bg-secondary-dark text-white text-xl rounded-md">Back to Homepage</a>
+	<h2 class="text-3xl font-bold">Seite konnte nicht gefunden werden!</h2>
+	<a href="/" class="mt-4 px-4 py-2 bg-primary text-white text-xl rounded-md">Zurück zur Homepage</a>
 </div>
 
 {{ end }}
