--- a/layouts/partials/topnav.html
+++ b/layouts/partials/topnav.html
@@ -1,4 +1,4 @@
-﻿<nav class="w-full bg-primary-dark sticky top-0">
+﻿<nav class="w-full bg-primary-dark sticky top-0 z-50">
 	<div x-data="{ open: false }" class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
 		<div class="p-4 flex flex-row items-center justify-between">
 			<a href="/">
