--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<!-- " {{.Content}}" pulls from the markdown content of the corresponding _index.md -->
-	<div class="max-w-2xl px-6 pt-6 pb-16 mx-auto prose dark:prose-invert dark:text-white">
+	<div class="max-w-2xl px-6 pt-6 pb-16 mx-auto prose">
 		{{.Content}}
 	</div>
 </article>
