Adds Clubheim Page and Home Banner.

--- a/layouts/partials/topnav.html
+++ b/layouts/partials/topnav.html
@@ -13,7 +13,7 @@
 		</div>
 		<div :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row text-white">
 			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/">Home</a>
-			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/unserclub">Unser Club</a>
+			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/unser-club">Unser Club</a>
 			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/tennistraining">Tennistraining</a>
 			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/news">News</a>
 			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/mitgliedschaft">Mitgliedschaft</a>
@@ -29,6 +29,7 @@
 					</div>
 				</div>
 			</div>
+			<a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:bg-primary focus:bg-primary focus:outline-none focus:shadow-outline" href="/clubheim">Clubheim</a>
 		</div>
 	</div>
 </nav>
