Updates Home Text Color.

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "main" }}
-<main>
+<main class="text-prose-body">
 
 	<div class="relative pb-16 mt-6">
 		<div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
@@ -42,7 +42,7 @@
 					<h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-primary md:text-5xl xl:text-6xl">
 						TC Lautlingen
 					</h1>
-					<h2 class="pb-2 text-3xl font-light text-gray-800 md:text-4xl">
+					<h2 class="pb-2 text-3xl font-bold md:text-4xl">
 						Tennis, das verbindet
 					</h2>
 					<div class="flex justify-center mt-8 space-x-6">
@@ -77,25 +77,25 @@
 			<h2 class="text-3xl font-bold tracking-tight text-primary sm:text-4xl">
 				Herzlich willkommen beim Tennis-Club Lautlingen e.V.
 			</h2>
-			<div class="mt-6 text-primary">
-				<div class="mt-6 space-y-6 text-primaryk">
-					<p class="text-lg text-primary">
+			<div class="mt-6">
+				<div class="mt-6 space-y-6">
+					<p class="text-lg">
 						einem dynamischen Verein mit über 300 Mitgliedern, darunter besonders viele begeisterte junge Tennisspieler! Unsere idyllische Tennisanlage im Eyachtal verfügt über zahlreiche Plätze, darunter zwei mit Flutlicht ausgestattete Courts und einer Ballwand.
 					</p>
-					<p class="text-lg text-primary">
+					<p class="text-lg">
 						Unser Leitspruch lautet: "Tennis, das verbindet!" Als Verein, der großen Wert auf Gemeinschaft und Zusammenhalt legt, sind wir stolz darauf, unseren Mitgliedern eine breite Palette an Events und Aktivitäten für alle Altersgruppen anzubieten. Neben Tennis stehen auch weitere Sportangebote wie "Fit for Tennis" und Nordic Walking zur Verfügung, um eine vielfältige sportliche Erfahrung zu gewährleisten. Unser Ziel ist es, nicht nur Sportmöglichkeiten, sondern auch eine unterstützende Gemeinschaft zu bieten, in der man gemeinsam Freude hat.
 					</p>
 				</div>
 			</div>
 		</div>
 		<div class="item">
-			<p class="text-lg text-primary">
+			<p class="text-lg">
 				Egal, ob Sie ein Anfänger oder erfahrener Tennisspieler sind – bei uns finden Sie schnell Anschluss und können sich auf und neben dem Platz wohlfühlen. Wir setzen uns stets dafür ein, unseren Mitgliedern die bestmögliche Unterstützung zu bieten, damit sie ihre Ziele im Tennissport erreichen können. Wir sind fest davon überzeugt, dass Tennis eine großartige Möglichkeit bietet, körperliche Fitness, soziale Kontakte und Spaß miteinander zu verbinden.
 			</p>
-			<p class="mt-6 text-lg text-primary">
+			<p class="mt-6 text-lg">
 				Wir freuen uns darauf, Sie auf unserer Homepage oder unserer Tennisanlage begrüßen zu dürfen! Bei Fragen oder Interesse an einer Mitgliedschaft erreichen Sie uns gerne unter <a href="mailto:info@tc-lautlingen.de">info@tc-lautlingen.de</a>.
 			</p>
-			<p class="mt-6 text-lg text-primary">
+			<p class="mt-6 text-lg">
 				Bis bald beim Tennis-Club Lautlingen! Sportliche Grüße, Fabian & Reinhold
 			</p>
 		</div>
