--- a/layouts/home.html
+++ b/layouts/home.html
@@ -17,18 +17,11 @@
 				<div class="relative">
 					<div class="sm:text-center">
 						<h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-							Unser Clubheim öffnet wieder!
+							Muttertagsspecial im Clubheim
 						</h2>
 						<p class="mt-4 text-xl text-white">
-							Ab dem 1. Mai 2025 freuen wir uns, Sie in unserem Clubheim wieder begrüßen zu dürfen.
+							Am Sonntag gibt's Kaffee und Kuchen und für jede Frau ein Glas Sekt gratis!
 						</p>
-					</div>
-					<div class="mt-6" style="margin-left:15%;margin-right:15%">
-						<a href="/clubheim">
-							<button class="bg-primary-dark block w-full px-5 py-3 text-base font-medium text-white border border-transparent rounded-md shadow hover:bg-black focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-primary-500 sm:px-10">
-								Mehr Informationen
-							</button>
-						</a>
 					</div>
 				</div>
 			</div>
