Removes Dark-mode colors.

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -175,47 +175,47 @@
 			Sponsoren
 		</h2>
 		<div class="mt-4 grid grid-cols-2 gap-0.5 lg:grid-cols-4">
-			<a href="https://www.mey.com/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/mey.png" class="max-h-12 dark:invert" alt="Mey" loading="lazy" />
+			<a href="https://www.mey.com/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/mey.png" class="max-h-12" alt="Mey" loading="lazy" />
 			</a>
-			<a href="https://intersport-rebi.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/rebi.jpg" class="max-h-12 dark:invert" alt="Intersport Rebi" loading="lazy" />
+			<a href="https://intersport-rebi.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/rebi.jpg" class="max-h-12" alt="Intersport Rebi" loading="lazy" />
 			</a>
-			<a href="https://wiedler.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/wiedler.png" class="max-h-12 dark:invert" alt="Wiedler" loading="lazy" />
+			<a href="https://wiedler.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/wiedler.png" class="max-h-12" alt="Wiedler" loading="lazy" />
 			</a>
-			<a href="https://www.praxis-attilamaisch.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/maisch.png" class="max-h-12 dark:invert" alt="Maisch" loading="lazy" />
+			<a href="https://www.praxis-attilamaisch.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/maisch.png" class="max-h-12" alt="Maisch" loading="lazy" />
 			</a>
-			<a href="https://www.muellerstrassenbau.eu/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/mueller.jpg" class="max-h-12 dark:invert" alt="Müller Straßenbau" loading="lazy" />
+			<a href="https://www.muellerstrassenbau.eu/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/mueller.jpg" class="max-h-12" alt="Müller Straßenbau" loading="lazy" />
 			</a>
-			<a href="https://www.mebold.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/mebold.jpg" class="max-h-12 dark:invert" alt="Mebold" loading="lazy" />
+			<a href="https://www.mebold.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/mebold.jpg" class="max-h-12" alt="Mebold" loading="lazy" />
 			</a>
-			<a href="https://www.maler-geiger.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/geiger.jpg" class="max-h-12 dark:invert" alt="Geiger" loading="lazy" />
+			<a href="https://www.maler-geiger.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/geiger.jpg" class="max-h-12" alt="Geiger" loading="lazy" />
 			</a>
-			<a href="https://www.volksbank-albstadt.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/volksbank.jpg" class="max-h-12 dark:invert" alt="Volksbank Albstadt" loading="lazy" />
+			<a href="https://www.volksbank-albstadt.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/volksbank.jpg" class="max-h-12" alt="Volksbank Albstadt" loading="lazy" />
 			</a>
-			<a href="https://kuechenhaus-schuhmacher.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/schuhmacher.jpg" class="max-h-12 dark:invert" alt="Küchenhaus Schuhmacher" loading="lazy" />
+			<a href="https://kuechenhaus-schuhmacher.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/schuhmacher.jpg" class="max-h-12" alt="Küchenhaus Schuhmacher" loading="lazy" />
 			</a>
-			<a href="https://www.weberheusser-yarns.com/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/weber-heusser.png" class="max-h-12 dark:invert" alt="Weber&Heusser" loading="lazy" />
+			<a href="https://www.weberheusser-yarns.com/" class="flex justify-center col-span-1 px-8 py-8">
+				<img src="/images/sponsors/weber-heusser.png" class="max-h-12" alt="Weber&Heusser" loading="lazy" />
 			</a>
-			<a href="https://www.sparkasse-zollernalb.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/sparkasse.jpg" class="max-h-12 dark:invert" alt="Sparkasse Zollernalb" loading="lazy" />
+			<a href="https://www.sparkasse-zollernalb.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/sparkasse.jpg" class="max-h-12" alt="Sparkasse Zollernalb" loading="lazy" />
 			</a>
-			<a href="http://zimmerei-reinauer.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/reinauer.png" class="max-h-12 dark:invert" alt="Reinauer" loading="lazy" />
+			<a href="http://zimmerei-reinauer.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/reinauer.png" class="max-h-12" alt="Reinauer" loading="lazy" />
 			</a>
-			<a href="http://www.lb-mediengruppe.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/LB-Mediengruppe.png" class="max-h-12 dark:invert" alt="LB-Mediengruppe" loading="lazy" />
+			<a href="http://www.lb-mediengruppe.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/LB-Mediengruppe.png" class="max-h-12" alt="LB-Mediengruppe" loading="lazy" />
 			</a>
-			<a href="https://www.albstadtwerke.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50 dark:bg-gray-900/10">
-				<img src="/images/sponsors/albstadtwerke.jpg" class="max-h-12 dark:invert" alt="AlbstadtWerke" loading="lazy" />
+			<a href="https://www.albstadtwerke.de/" class="flex justify-center col-span-1 px-8 py-8 bg-gray-50">
+				<img src="/images/sponsors/albstadtwerke.jpg" class="max-h-12" alt="AlbstadtWerke" loading="lazy" />
 			</a>
 		</div>
 	</div>
