--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,7 +23,7 @@
         {{- with $medium -}}, {{.}} 550w{{- end -}}
         {{- with $large -}}, {{.}} 768w{{- end -}}
         {{- with $featuredimage -}}, {{.}} 1100w{{- end -}}"
-				 class="object-fill overflow-hidden rounded-lg shadow-lg ring-4 ring-zinc-300/40 dark:ring-gray-900/40 shadow-neutral-100/20 dark:shadow-neutral-800/40 max-h-96"
+				 class="object-fill overflow-hidden rounded-lg shadow-lg ring-4 ring-zinc-300/40 shadow-neutral-100/20 max-h-96"
 				 alt="{{ .Params.title }}" />
 			{{ end }}
 			{{ end }}
