--- a/layouts/partials/posts-template.html
+++ b/layouts/partials/posts-template.html
@@ -16,7 +16,7 @@
 				<div class="p-6">
 					<div class="flex-1">
 						<a href="{{.Permalink}}"
-						   class="block mt-2 text-2xl font-black text-primary hover:text-primary-light dark:hover:text-primary-500 hover:underline">
+						   class="block mt-2 text-2xl font-black text-primary hover:text-primary-light hover:underline">
 							{{.Title}}
 						</a>
 						<p class="mt-3 text-base text-primary">
