--- a/layouts/home.html
+++ b/layouts/home.html
@@ -4,6 +4,34 @@
 
 {{ define "main" }}
 <main class="text-prose-body">
+
+	<div class="relative pb-16 mt-6">
+		<div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
+			<div class="relative px-6 py-10 overflow-hidden shadow-xl bg-primary-light rounded-2xl sm:px-12 sm:py-20">
+				<div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
+					<svg class="absolute inset-0 w-full h-full" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 1463 360" loading="lazy">
+						<path class="text-primary text-opacity-40" fill="currentColor" d="M-82.673 72l1761.849 472.086-134.327 501.315-1761.85-472.086z" />
+						<path class="text-primary text-opacity-40" fill="currentColor" d="M-217.088 544.086L1544.761 72l134.327 501.316-1761.849 472.086z" />
+					</svg>
+				</div>
+				<div class="relative">
+					<div class="sm:text-center">
+						<h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
+							VATERTAGS-GRILLFEST 29. MAI 2025
+						</h2>
+					</div>
+					<div class="mt-6" style="margin-left:15%;margin-right:15%">
+						<a href="/pdf/vatertag">
+							<button class="bg-primary-dark block w-full px-5 py-3 text-base font-medium text-white border border-transparent rounded-md shadow hover:bg-black focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-primary-500 sm:px-10">
+								Mehr Informationen
+							</button>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="bg-gray-200">
 		<div class="max-w-screen-xl px-4 py-8 mx-auto">
 			<div class="flex justify-center items-center">
