Split content news in different years.

--- a/layouts/partials/posts-template.html
+++ b/layouts/partials/posts-template.html
@@ -4,14 +4,16 @@
 			{{ range .Paginator.Pages }}
 			<div class="flex flex-col overflow-hidden rounded-lg shadow-lg bg-gray-50">
 				<a href="{{.Permalink}}">
-					{{ with .Params.featured_image }}
-					{{ with resources.Get . }}
-					{{ $postimage := (.Resize "500x webp q90").RelPermalink }}
-					<img src="{{ $postimage }}" class="object-fill overflow-hidden rounded-t-lg" width="100%" height=""
-						 loading="lazy" alt="{{ .Title }}" />
-
-					{{ end }}
-					{{ end }}
+                    {{ $page := . }}
+                    {{ with $page.Params.featured_image }}
+                    {{ with $page.Resources.GetMatch . }}
+                    {{ $postimage := (.Resize "500x webp q90").RelPermalink }}
+                    <img src="{{ $postimage }}"
+                         class="object-fill overflow-hidden rounded-t-lg"
+                         loading="lazy"
+                         alt="{{ $page.Title }}" />
+                    {{ end }}
+                    {{ end }}
 				</a>
 				<div class="p-6">
 					<div class="flex-1">
