--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,7 +13,7 @@
 	<div class="max-w-4xl mx-auto mt-8 mb-2">
 		<div class="px-6 flex justify-center">
 			{{ with .Params.featured_image }}
-			{{ with resources.Get . }}
+            {{ with $.Page.Resources.GetMatch . }}
 			{{ $small := (.Resize "400x webp q80").RelPermalink }}
 			{{ $medium := (.Resize "550x webp q80").RelPermalink }}
 			{{ $large := (.Resize "900x webp q80").RelPermalink }}
