--- a/layouts/home.html
+++ b/layouts/home.html
@@ -91,15 +91,18 @@
 						{{ $filteredPages := first 3 $pagesInSubfolder }}
 						{{ range $filteredPages }}
 						<div class="flex flex-col overflow-hidden rounded-lg shadow-lg bg-gray-50">
-							<a href="{{.Permalink}}">
-								{{ with .Params.featured_image }}
-								{{ with resources.Get . }}
-								{{ $postimage := (.Resize "500x webp q90").RelPermalink }}
-								<img src="{{ $postimage }}" class="object-fill overflow-hidden rounded-t-lg" width="100%" height="" loading="lazy" alt="{{ .Title }}" />
-
-								{{ end }}
-								{{ end }}
-							</a>
+                            {{ $page := . }}
+                            <a href="{{ $page.Permalink }}">
+                                {{ with $page.Params.featured_image }}
+                                {{ with $page.Resources.GetMatch . }}
+                                {{ $postimage := (.Resize "500x webp q90").RelPermalink }}
+                                <img src="{{ $postimage }}"
+                                     class="object-fill overflow-hidden rounded-t-lg"
+                                     loading="lazy"
+                                     alt="{{ $page.Title }}" />
+                                {{ end }}
+                                {{ end }}
+                            </a>
 							<div class="p-6">
 								<div class="flex-1">
 									<a href="{{.Permalink}}" class="block mt-2 text-2xl font-black text-primary hover:text-primary-light hover:underline">
